cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_208.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:166: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:166:17: Write of unused value
164.                   l2c(v1, iv);
165.                   l2c(d0, iv);
166.                   l2c(d1, iv);
                       ^
167.                   /* shift ovec left most of the bits... */
168.                   memmove(ovec, ovec + num / 8, 8 + (num % 8 ? 1 : 0));
